# swagger/swagger.json
@@ -1241,20 +1241,166 @@
                     }
                 }
             }
+        },
+        "/solicitudesCRP/": {
+            "get": {
+                "tags": [
+                    "solicitudesCRP"
+                ],
+                "description": "get all objects",
+                "operationId": "SolicitudesCRPController.GetAll",
+                "responses": {
+                    "200": {
+                        "description": "SolicitudCRP models.SolicitudCRP"
+                    },
+                    "403": {
+                        "description": ":objectId is empty"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "solicitudesCRP"
+                ],
+                "description": "Post",
+                "operationId": "SolicitudesCRPController.Post",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Body para la creacion de SolicitudesCRP",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SolicitudCRP"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{int} SolicitudCRP.Id"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/solicitudesCRP/{objectId}": {
+            "get": {
+                "tags": [
+                    "solicitudesCRP"
+                ],
+                "description": "get SolicitudCRP by nombre",
+                "operationId": "SolicitudesCRPController.Get",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "nombre",
+                        "description": "El nombre de la SolicitudCRP a consultar",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.SolicitudCRP"
+                        }
+                    },
+                    "403": {
+                        "description": ":uid is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "solicitudesCRP"
+                ],
+                "description": "update the SolicitudCRP",
+                "operationId": "SolicitudesCRPController.Update",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "objectId",
+                        "description": "The objectid you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "The body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Object"
+                        }
+                    },
+                    "403": {
+                        "description": ":objectId is empty"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "solicitudesCRP"
+                ],
+                "description": "Borrar SolicitudCRP",
+                "operationId": "SolicitudesCRPController.Borrar SolicitudCRP",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "objectId",
+                        "description": "El ObjectId del objeto que se quiere borrar",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} ok"
+                    },
+                    "403": {
+                        "description": "objectId is empty"
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "18826.0xc000456420.false": {
+        "21784.0xc0004c27e0.false": {
             "title": "false",
             "type": "object"
         },
-        "19106.rubroFuente": {
+        "22064.rubroFuente": {
             "title": "rubroFuente",
             "type": "object"
         },
         "bson.ObjectId": {
             "title": "ObjectId",
             "type": "object"
+        },
+        "models.Compromiso": {
+            "title": "Compromiso",
+            "type": "object",
+            "properties": {
+                "numeroCompromiso": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "tipoCompromiso": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
         },
         "models.FuenteFinanciamiento": {
             "title": "FuenteFinanciamiento",
@@ -1267,13 +1413,13 @@
                     "type": "string"
                 },
                 "Rubros": {
-                    "$ref": "#/definitions/19106.rubroFuente"
+                    "$ref": "#/definitions/22064.rubroFuente"
                 },
                 "TipoDocumento": {
                     "type": "string"
                 },
                 "TipoFuente": {
-                    "$ref": "#/definitions/18826.0xc000456420.false"
+                    "$ref": "#/definitions/21784.0xc0004c27e0.false"
                 },
                 "ValorAcumulado": {
                     "type": "number",
@@ -1423,6 +1569,36 @@
                 }
             }
         },
+        "models.SolicitudCRP": {
+            "title": "SolicitudCRP",
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "$ref": "#/definitions/bson.ObjectId"
+                },
+                "beneficiario": {
+                    "type": "string"
+                },
+                "compromiso": {
+                    "$ref": "#/definitions/models.Compromiso"
+                },
+                "consecutivo": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "consecutivoCdp": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "infoCrp": {
+                    "$ref": "#/definitions/models.infoCrp"
+                },
+                "valor": {
+                    "type": "number",
+                    "format": "double"
+                }
+            }
+        },
         "models.actividad": {
             "title": "actividad",
             "type": "object",
@@ -1510,6 +1686,24 @@
                 }
             }
         },
+        "models.infoCrp": {
+            "title": "infoCrp",
+            "type": "object",
+            "properties": {
+                "consecutivo": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "estado": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "fechaExpedicion": {
+                    "type": "string",
+                    "format": "datetime"
+                }
+            }
+        },
         "models.meta": {
             "title": "meta",
             "type": "object",
@@ -1571,6 +1765,10 @@
         {
             "name": "solicitudesCDP",
             "description": "SolicitudesCDPController estructura para un controlador de beego\n"
+        },
+        {
+            "name": "solicitudesCRP",
+            "description": "SolicitudesCRPController estructura para un controlador de beego\n"
         }
     ]
 }
